--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -53,7 +53,8 @@
                   "replace": "src/app/environments/environment.ts",
                   "with": "src/app/environments/prod.environment.ts"
                 }
-              ]
+              ],
+              "serviceWorker": "ngsw-config.json"
             },
             "development": {
               "optimization": false,
