--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@angular/service-worker": "^19.0.0",
     "@auth0/auth0-angular": "^2.2.3",
     "@tailwindcss/postcss": "^4.1.11",
     "postcss": "^8.5.6",
