reconfigured caching and the authguard

--- a/frontend/ngsw-config.json
+++ b/frontend/ngsw-config.json
@@ -26,5 +26,30 @@
         ]
       }
     }
+  ],   
+  "dataGroups": [
+    {
+      "name": "api-cache",
+      "urls": [
+        "/api/**"
+      ],
+      "cacheConfig": {
+        "strategy": "freshness",
+        "maxSize": 100,
+        "maxAge": "1h",
+        "timeout": "5s"
+      }
+    },
+    {
+      "name": "api-performance", 
+      "urls": [
+        "/api/v1/user/me"
+      ],
+      "cacheConfig": {
+        "strategy": "performance",
+        "maxSize": 50,
+        "maxAge": "1d"
+      }
+    }
   ]
 }
